--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "axios": "^0.16.2",
+    "querystring": "^0.2.0",
     "vue": "^2.3.4",
     "vue-router": "^2.3.1",
     "vuetify": "^0.13.0"
