--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "querystring": "^0.2.0",
     "vue": "^2.3.4",
     "vue-router": "^2.3.1",
-    "vuetify": "^0.13.0"
+    "vuetify": "^0.13.0",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
