--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "querystring": "^0.2.0",
     "vue": "^2.3.4",
     "vue-router": "^2.3.1",
-    "vuetify": "0.16.0",
+    "vuetify": "^0.16.6",
     "vuex": "^2.3.1"
   },
   "devDependencies": {
