--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "chart.js": "^2.7.0",
     "querystring": "^0.2.0",
     "vue": "^2.3.4",
+    "vue-chartjs": "^3.0.0",
     "vue-router": "^2.3.1",
     "vuetify": "^0.16.6",
     "vuex": "^2.3.1"
