--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
+    "build-and-install": "npm run build && cd dist && npm run one-click-update",
     "build": "node build/build.js",
     "lint": "eslint --ext .js,.vue src"
   },
