--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.16.2",
     "chart.js": "^2.7.0",
     "querystring": "^0.2.0",
+    "socket.io-client": "^2.1.1",
     "vue": "^2.3.4",
     "vue-chartjs": "^3.0.0",
     "vue-router": "^2.3.1",
